Refactor rental management: rename pictureURL field to picture in DTOs, update RentalController to return rentals in a structured response, and enhance error handling in JWT authentication.